--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<div class="test">click</div>
+	<div class="test">hello</div>
 	<!-- <script src="./static/libs/0.js"></script> -->
 	<!-- <script src="./static/libs/1.js"></script>	 -->
 	<!-- <script src="./static/libs/wnlui.js"></script> -->
