--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-	<div class="test">hello</div>
-	<!-- <script src="./static/libs/0.js"></script> -->
-	<!-- <script src="./static/libs/1.js"></script>	 -->
-	<!-- <script src="./static/libs/wnlui.js"></script> -->
+	<div class="test" id="test">hello</div>
 </body>
 
 </html>
